# jakub-dunaj-bachelors-thesis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: pre-commit.yml  thesis-document.yml
cnn_model/artificial_backgrounds/: README.md
scripts/dataset_preprocessing/: add_artificial_background.py  artificial_background_adder.py  dataset_limiter.py  dataset_preprocessing_wrapper.py  divide_initial_dataset.py  initial_dataset_divider.py
scripts/dataset_preprocessing/artificial_backgrounds/: README.md
scripts/model_training/: __init__.py  cli.py  exceptions.py  model_trainer.py  pyproject.toml  train_model.py  training_script.py
scripts/model_training/model_trainer/: model_trainer.py
scripts/utils/: picture_counter.py
src/dataset_preprocessing/: dataset_divider.py  dataset_preprocessing_wrapper.py
src/dataset_preprocessing/artificial_backgrounds/: README.md
src/google_colab/: train_model.ipynb
src/model_training/: pyproject.toml
src/model_training/model_trainer/: accuracy_per_class_metric.py  cli.py  custom_history_callback.py  exceptions.py  model_trainer.py  utils.py
src/utils/: picture_counter.py  subprocess_runner.py
thesis_document/: .gitignore  BachelorBUI.cls  jakub_dunaj_bachelors_thesis.tex  references.bib
