[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model_trainer"
version = "0.1.0"
authors = [{name = "Jakub Dunaj", email = "e12121285@student.tuwien.ac.at"}]
dependencies = ["keras~=3.6.0", "tensorflow~=2.17.0", "matplotlib~=3.9.2", "rich-argparse~=1.6.0", ""]

[project.scripts]
model-trainer = "model_trainer.model_trainer:main"

[tool.hatch.build.targets.wheel]
packages = ["model_trainer"]
